# ed-fairness-becnhmark

./: .gitignore  CITATION.cff  LICENSE  README  README.md  dataset_path.py  pyproject.toml  requirements.txt
Benchmark_scripts/mitigation/: stanford_DIR.ipynb  stanford_SMOTE.ipynb
Benchmark_scripts/model_training_evaluation/: helpers.py  stanford_utilization_evaluation.ipynb
configs/: paths.example.yaml
data/raw_Stanford/: data_general_processing.ipynb  dataset_path.py  extracting_master_dataset.py  helpers.py  util.py
mappers/: elixhauser_charlson.py
notebooks/: 01_data_extraction_and_preprocessing.ipynb  02_model_development_and_evaluation.ipynb  03_mitigation_pre_dir.ipynb  03_mitigation_pre_reweighing.ipynb  03_mitigation_pre_smote.ipynb  04_mitigation_in_adversarial_debiasing.ipynb  05_mitigation_post_calibrated_eq_odds.ipynb  05_mitigation_post_equalized_odds.ipynb  05_mitigation_post_reject_option.ipynb
src/fair_ed/: __init__.py  config.py  modeling.py
src/fair_ed/data/: __init__.py  build_stanford.py  disease_defs.py  features.py  mimic.py  stanford.py
src/fair_ed/evaluation/: __init__.py  fairness.py  lstm.py  metrics.py
src/fair_ed/mappers/: __init__.py
src/fair_ed/mitigation/: __init__.py  base.py  inprocessing.py  postprocessing.py  preprocessing.py
src/fair_ed/scores/: __init__.py  clinical_scores.py
